Fix spacing on navbar sections so that message is in middle

--- a/docs/index.css
+++ b/docs/index.css
@@ -42,6 +42,24 @@ nav {
     display: flex;
     align-items: center;
     gap: 20px;
+    width: 33%;
+}
+
+.logo-section {
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.welcome-section {
+    display: flex;
+    justify-content: center;
+}
+
+.profile-section {
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
 }
 
 .pointer {
